<?xml version="1.0"?>
<package>
    <name>cob_grasping</name>
    <version>0.5.0</version>
    <description>Grasping application for the Care-O-bot 4</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="Florian.Koehler@ipa.fraunhofer.de">Florian Koehler</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
    </export>
</package>
