<package format="2">
  <name>atf</name>
  <version>1.0.0</version>
  <description>atf meta-package</description>

  <license>LGPL</license>

  <maintainer email="florian.koehler@ipa.fraunhofer.de">Florian Koehler</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>atf_core</exec_depend>
  <exec_depend>atf_metrics</exec_depend>
  <exec_depend>atf_msgs</exec_depend>
  <exec_depend>atf_presenter</exec_depend>
  <exec_depend>atf_recorder</exec_depend>
  <exec_depend>atf_recorder_plugins</exec_depend>
  <exec_depend>atf_status_server</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
