<?xml version="1.0"?>
<package format="2">
    <name>atf_core</name>
    <version>0.1.0</version>
    <description>ATF functionalities for generating tests, recording data, analysing data and merging results.</description>

    <maintainer email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</maintainer>

    <author email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</author>
    <author>Florian Koehler</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <test_depend>atf_metrics</test_depend>
    <test_depend>atf_msgs</test_depend>
    <test_depend>atf_recorder_plugins</test_depend>
    <test_depend>atf_status_server</test_depend>
    <test_depend>python-lxml</test_depend>
    <test_depend>python-progressbar</test_depend>
    <test_depend>roslaunch</test_depend>
    <test_depend>rospy</test_depend>
    <test_depend>rostest</test_depend>
    <test_depend>smach</test_depend>
    <test_depend>smach_ros</test_depend>

</package>
