<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>atf_core</name>
    <version>0.1.1</version>
    <description>ATF functionalities for generating tests, recording data, analysing data and aggregating results.</description>

    <maintainer email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</maintainer>

    <author email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</author>
    <author>Florian Koehler</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
    <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

    <exec_depend>atf_metrics</exec_depend>
    <exec_depend>atf_msgs</exec_depend>
    <exec_depend>atf_recorder_plugins</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-tools</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-tools</exec_depend>
    <exec_depend>diagnostic_msgs</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-lxml</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-progressbar</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-lxml</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-progressbar</exec_depend>
    <exec_depend>roslaunch</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>rostest</exec_depend>
    <exec_depend>smach</exec_depend>
    <exec_depend>smach_ros</exec_depend>

</package>
