<?xml version="1.0"?>
<package format="2">
    <name>atf_metrics</name>
    <version>0.1.0</version>
    <description>Metrics for the ATF.</description>

    <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>

    <author email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</author>
    <author>Florian Koehler</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>tf</depend>

</package>
