<?xml version="1.0"?>
<package format="2">
    <name>atf_metrics</name>
    <version>0.1.0</version>
    <description>Metrics for the ATF.</description>

    <maintainer email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</maintainer>

    <author email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</author>
    <author>Florian Koehler</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>atf_msgs</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2_py</exec_depend>

</package>
