<?xml version="1.0"?>
<package format="2">
    <name>atf_msgs</name>
    <version>0.1.1</version>
    <description>Messages, services and actions for the ATF.</description>

    <maintainer email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</maintainer>

    <author email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</author>
    <author>Florian Koehler</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>actionlib_msgs</depend>
    <depend>std_msgs</depend>

</package>
