<?xml version="1.0"?>
<package format="2">
    <name>atf_plotter</name>
    <version>0.0.0</version>
    <description>ATF plotting functionalities for test sublevel_item_list.</description>

    <maintainer email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</maintainer>

    <author email="bjoern.eistel@mojin-robotics.de">Bjoern Eistel</author>

    <license>TBD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>

</package>
