<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>atf_plotter</name>
    <version>0.1.1</version>
    <description>ATF plotting functionalities for ATF results.</description>

    <maintainer email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</maintainer>

    <author email="bjoern.eistel@mojin-robotics.de">Bjoern Eistel</author>
    <author email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>atf_core</exec_depend>
    <exec_depend>atf_msgs</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>
    <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
    <exec_depend>rosbag</exec_depend>
    <exec_depend>rospy</exec_depend>

</package>
