<?xml version="1.0"?>
<package format="2">
    <name>atf_presenter</name>
    <version>1.0.0</version>
    <description>The atf_presenter package</description>

    <maintainer email="florian.koehler@ipa.fraunhofer.de">Florian Köhler</maintainer>
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>