<?xml version="1.0"?>
<package format="2">
    <name>atf_presenter</name>
    <version>0.1.0</version>
    <description>Web based interface for visualizing ATF results.</description>

    <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>

    <author email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</author>
    <author>Florian Koehler</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
