<?xml version="1.0"?>
<package format="2">
    <name>atf_status_server</name>
    <version>1.0.0</version>
    <description>The atf_status_server package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="Florian.Koehler@ipa.fraunhofer.de">Florian Koehler</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>atf_msgs</depend>
    <depend>rosbridge_server</depend>

</package>