<?xml version="1.0"?>
<package format="2">
    <name>atf_status_server</name>
    <version>0.1.0</version>
    <description>Status monitoring system for the ATF.</description>

    <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>

    <author email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</author>
    <author>Florian Koehler</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>atf_msgs</depend>
    <depend>rosbridge_server</depend>
    <depend>roslaunch</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>

</package>
