<?xml version="1.0"?>
<package format="2">
    <name>atf_test</name>
    <version>1.0.0</version>
    <description>The atf_test package</description>

    <license>LGPL</license>

    <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>
    <author email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>atf_core</depend>

    <test_depend>rostest</test_depend>

</package>
