<?xml version="1.0"?>
<package format="2">
    <name>atf_test</name>
    <version>0.1.1</version>
    <description>Example test configuration to verifying the correct behaviour of the ATF.</description>

    <maintainer email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</maintainer>

    <author email="florian.weisshardt@mojin-robotics.de">Florian Weisshardt</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>atf_core</exec_depend>
    <exec_depend>atf_test_tools</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>rostopic</exec_depend>
    <exec_depend>tf2_ros</exec_depend>

    <test_depend>atf_core</test_depend>
    <test_depend>rostest</test_depend>

</package>
