<?xml version="1.0"?>
<package format="2">
    <name>cob_grasping_app</name>
    <version>1.0.0</version>
    <description>Grasping application for the Care-O-bot 4</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="Florian.Koehler@ipa.fraunhofer.de">Florian Koehler</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>LGPL</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <test_depend>rostest</test_depend>

</package>
